framework/contracts/account/manager/tests/snapshots/subaccount__sub_account_move_ownership_to_sub_account-N°v¸§ÝEÔ÷iäc#î£³²iÿCd[-x.snap
---
source: contracts/account/manager/tests/subaccount.rs
expression: chain.app.borrow().dump_wasm_raw(&contract_addr)
---
- - - 0
    - 123
    - 53
    - 125
    - 115
    - 116
    - 97
    - 116
    - 101
  - - 123
    - 34
    - 109
    - 111
    - 100
    - 117
    - 108
    - 101
    - 115
    - 34
    - 58
    - 91
    - 34
    - 194
    - 135
    - 195
    - 183
    - 37
    - 36
    - 92
    - 34
    - 194
    - 187
    - 195
    - 140
    - 37
    - 195
    - 183
    - 119
    - 45
    - 115
    - 195
    - 131
    - 195
    - 188
    - 56
    - 194
    - 166
    - 79
    - 48
    - 92
    - 117
    - 48
    - 48
    - 48
    - 50
    - 194
    - 148
    - 46
    - 92
    - 117
    - 48
    - 48
    - 48
    - 51
    - 115
    - 102
    - 68
    - 50
    - 99
    - 194
    - 133
    - 113
    - 77
    - 92
    - 117
    - 48
    - 48
    - 49
    - 48
    - 194
    - 128
    - 34
    - 93
    - 125
- - - 0
    - 123
    - 54
    - 125
    - 97
    - 110
    - 115
    - 95
    - 104
    - 111
    - 115
    - 116
  - - 123
    - 34
    - 97
    - 100
    - 100
    - 114
    - 101
    - 115
    - 115
    - 34
    - 58
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 48
    - 34
    - 125
- - - 97
    - 99
    - 99
    - 95
    - 105
    - 100
  - - 123
    - 34
    - 116
    - 114
    - 97
    - 99
    - 101
    - 34
    - 58
    - 34
    - 108
    - 111
    - 99
    - 97
    - 108
    - 34
    - 44
    - 34
    - 115
    - 101
    - 113
    - 34
    - 58
    - 51
    - 125
- - - 97
    - 100
    - 109
    - 105
    - 110
  - - 34
    - 194
    - 135
    - 195
    - 183
    - 37
    - 36
    - 92
    - 34
    - 194
    - 187
    - 195
    - 140
    - 37
    - 195
    - 183
    - 119
    - 45
    - 115
    - 195
    - 131
    - 195
    - 188
    - 56
    - 194
    - 166
    - 79
    - 48
    - 92
    - 117
    - 48
    - 48
    - 48
    - 50
    - 194
    - 148
    - 46
    - 92
    - 117
    - 48
    - 48
    - 48
    - 51
    - 115
    - 102
    - 68
    - 50
    - 99
    - 194
    - 133
    - 113
    - 77
    - 92
    - 117
    - 48
    - 48
    - 49
    - 48
    - 194
    - 128
    - 34
- - - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 95
    - 105
    - 110
    - 102
    - 111
  - - 123
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 34
    - 58
    - 34
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 58
    - 112
    - 114
    - 111
    - 120
    - 121
    - 34
    - 44
    - 34
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 34
    - 58
    - 34
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
    - 34
    - 125

